--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
 {#        </div>#}
         <div class="card">
           <div class="card-header">
-            Create {{ issue.author }} at {{ issue.date }}
+            Create on {{ issue.date }} by {{ issue.author }}
           </div>
           <div class="card-body">
               <form method="post">
