--- a/templates/issuepage.html
+++ b/templates/issuepage.html
@@ -8,7 +8,7 @@
 
 <div class="card">
       <div class="card-header">
-        Create {{ issue.author }} at {{ issue.date }}
+        Create on {{ issue.date }} by {{ issue.author }}
       </div>
       <div class="card-body">
           <form method="post">
