--- a/templates/issuepage.html
+++ b/templates/issuepage.html
@@ -12,7 +12,7 @@
       </div>
       <div class="card-body">
           <form method="post">
-              <h4 class="card-title"><a href="issue/{{ issue.id }}" class="link-gray-dark" >{{ issue.title }}</a></h4>
+              <h4 class="card-title"><a href="" class="link-gray-dark" >{{ issue.title }}</a></h4>
           </form>
             <p class="card-text">{{ issue.text }}</p>
       </div>
