--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <form method="post">
+            <form method="post" name="new-issue">
               <div class="modal-header">
                 <h4 class="modal-title" id="myModalLabel">New issue</h4>
               </div>
@@ -26,7 +26,7 @@
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <input type="submit" class="btn btn-primary" value="Save changes">
+                <input type="submit" class="btn btn-primary" value="New issue">
               </div>
             </form>
         </div>
@@ -37,15 +37,26 @@
 {#        <div class="alert alert-info">#}
 {#            <h3>{{ issue.title }}</h3>#}
 {#        </div>#}
+        <a class="link-gray-dark" data-toggle="collapse" href="#collapse{{ issue.id }}" role="button" aria-expanded="false" aria-controls="collapse{{ issue.id }}">
         <div class="card">
           <div class="card-header">
-            Create on {{ issue.date }} by {{ issue.author }}
+            Create on {{ issue.timestamp }} by {{ issue.author }}
           </div>
           <div class="card-body">
-              <form method="post">
-                  <h4 class="card-title"><a href="issue/{{ issue.id }}" class="link-gray-dark" >{{ issue.title }}</a></h4>
-              </form>
+              <h4 class="card-title">{{ issue.title }}</h4>
           </div>
+        </div>
+        </a>
+        <div class="collapse" id="collapse{{ issue.id }}">
+        {% for comment in issue.comments.all() %}
+          <div class="card card-body"> {{ comment.text }}</div>
+        {% endfor %}
+        <div class="card card-footer">
+        <form method="post" action="/comment/{{ issue.id }}">
+            <textarea name="text" class="form-control issue-textarea-comment" placeholder="Leave a comment"></textarea>
+            <input type="submit" class="btn btn-primary" value="Comment">
+        </form>
+        </div>
         </div>
     {% endfor %}
 {% endblock %}
