--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,11 @@
 </head>
 <body>
 <header class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-  <p class="h5 my-0 me-md-auto fw-normal">{{ self.title() }}</p>
+  <p class="h3 my-0 me-md-auto fw-normal">Issue tracker</p>
+  <nav class="my-2 my-md-0 me-md-3">
+    <a class="btn btn-outline-primary" href="#">Login</a>
+    <a class="btn btn-outline-primary" href="#">Sign up</a>
+  </nav>
 </header>
 <div id="content" class="content">{% block content %}{% endblock %}</div>
 </body>
