--- a/templates/base.html
+++ b/templates/base.html
@@ -6,13 +6,16 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='base.css') }}">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
 <header class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-  <p class="h3 my-0 me-md-auto fw-normal">Issue tracker</p>
+        <a class="link-gray-dark h3 my-0 me-md-auto fw-normal" href="/">
+              Issue tracker
+        </a>
   <nav class="my-2 my-md-0 me-md-3">
     <a class="btn btn-outline-primary" href="#">Login</a>
     <a class="btn btn-outline-primary" href="#">Sign up</a>
