--- a/templates/issuepage.html
+++ b/templates/issuepage.html
@@ -7,7 +7,14 @@
 {% block content %}
 
 <h1>{{ issue.title_and_id() }}</h1>
-    {{ issue.get_styled_labels() }}
+{#    {{ issue.get_styled_labels() }}#}
+<h5>
+  {% if issue.is_open %}
+  <span class="badge badge-success">Open</span>
+  {% else %}
+  <span class="badge badge-danger">Closed</span>
+  {% endif %}
+</h5>
 
 {% for comment in issue.comments.all() %}
 <div class="card">
@@ -17,6 +24,7 @@
       <div class="card-body"> {{ comment.text }}</div>
 </div>
 {% endfor %}
+{% if issue.is_open %}
 <div class="card">
   <div class="card-header">
     Leave a comment
@@ -24,8 +32,10 @@
   <div class="card-body">
     <form method="post" action="/comment/{{ issue.id }}">
       <textarea name="text" class="form-control issue-textarea-comment" placeholder="Leave a comment"></textarea>
-      <input type="submit" class="btn btn-primary" value="Comment">
+      <input type="submit" name="action" class="btn btn-primary" value="Comment">
+      <input type="submit" name="action" class="btn btn-primary" value="Comment & close">
     </form>
   </div>
 </div>
+{% endif %}
 {% endblock %}
