Add login and signup

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,8 +17,12 @@
               Issue tracker
         </a>
   <nav class="my-2 my-md-0 me-md-3">
-    <a class="btn btn-outline-primary" href="#">Login</a>
-    <a class="btn btn-outline-primary" href="#">Sign up</a>
+    {% if current_user.is_authenticated %}
+    <h5 class="logged">You are logged in as {{ current_user.name }} </h5>
+    {% else %}
+    <a class="btn btn-outline-primary" href="/login">Login</a>
+    <a class="btn btn-outline-primary" href="/signup">Sign up</a>
+    {% endif %}
   </nav>
 </header>
 <div id="content" class="content">{% block content %}{% endblock %}</div>
