--- a/static/base.css
+++ b/static/base.css
@@ -1,3 +1,7 @@
+html, body {
+    height: 100%;
+}
+
 .content {
     margin-left: 17%;
     margin-right: 17%;
@@ -25,4 +29,35 @@
     /*background-color: rgba(0,0,0,.03)!important;*/
     margin-top: 1em;
     margin-bottom: 1em;
+}
+
+.form-signin {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto;
+  text-align: center;
+}
+.form-signin .form-control {
+  position: relative;
+  box-sizing: border-box;
+  height: auto;
+  padding: 10px;
+  font-size: 16px;
+}
+.form-signin .form-control:focus {
+  z-index: 2;
+}
+.form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+.logged {
+    margin: 0;
 }
