--- a/templates/index.html
+++ b/templates/index.html
@@ -45,6 +45,7 @@
         <div class="card">
           <div class="card-header">
             Create on {{ issue.comments.first().pretty_date() }} by {{ issue.user.name }}
+{#            {{ issue.generate_label_divs() }}#}
           </div>
           <div class="card-body">
             <h4>
