--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
     {% for issue in issues %}
         <div class="card">
           <div class="card-header">
-            Create on {{ issue.comments.first().pretty_date() }} by {{ issue.user.name }}
+            Created on {{ issue.comments.first().pretty_date() }} by {{ issue.user.name }}
 {#            {{ issue.generate_label_divs() }}#}
           </div>
           <div class="card-body">
